--- a/app/src/main/res/layout/activity_proverb_detail.xml
+++ b/app/src/main/res/layout/activity_proverb_detail.xml
@@ -13,6 +13,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="@string/proverb_text"
         android:id="@+id/proverb_text" />
 
@@ -23,6 +25,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:text="@string/proverb_description"
         android:id="@+id/proverb_description" />
 
