--- a/app/src/main/res/layout/activity_proverb_list.xml
+++ b/app/src/main/res/layout/activity_proverb_list.xml
@@ -6,6 +6,8 @@
 
     <ListView android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:id="@+id/mainListView">
     </ListView>
 
